--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,151 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+.AppContainer {
+  padding-top: 5vh;
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
+  gap: 30px;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.padWrapper {
+  max-width: 100vw;
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+  gap: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.pad {
+  width: 200px;
+  height: 400px;
+  border-radius: 10px;
+}
+
+.green {
+  background-color: #04c404;
+  opacity: 0.3;
+}
+
+.red {
+  background-color: #ff0000;
+  opacity: 0.3;
+}
+
+.yellow {
+  background-color: #ffff00;
+  opacity: 0.3;
+}
+
+.blue {
+  background-color: #0000ff;
+  opacity: 0.3;
+}
+
+.flash {
+  opacity: 1.0;
+}
+
+.startButton {
+  width: 50vw;
+  height: 50px;
+  border: none;
+  border-radius: 10px;
+
+  font-size: calc(20px + 2vmin);
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.score {
+  font-size: calc(20px + 2vmin);
+  font-weight: 500;
+}
+
+.lost {
+  position: absolute;
+  margin: auto;
+  width: 400px;
+  height: 300px;
+  background-color: #101114;
+  border-radius: 10px;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
+.lost button {
+  width: 50%;
+  height: 50px;
+  border: none;
+  border-radius: 10px;
+
+  font-family: "Ubuntu", sans-serif;
+  font-size: calc(10px + 2vmin);
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.footer {
+  padding: 20px;
+  background-color: #282c34;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  color: white;
+}
+
+.contributors {
+  font-size: calc(10px + 2vmin);
+}
+
+.footer nav {
+  padding: 15px;
+  display: flex;
+  gap: 25px;
+}
+
+a {
+  color: #61dafb;
+  font-size: calc(5px + 2vmin);
+}
+
+@media (max-width: 375px) {
+  .pad {
+    width: 140px;
+    height: 140px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .padWrapper {
+    flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 720px) {
+  .pad {
+    width: 200px;
+    height: 200px;
+  }
+
+  .padWrapper {
+    flex-wrap: wrap;
   }
 }
