--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@
 
 .lost {
   position: absolute;
-  margin: auto;
+  top: 35%;
   width: 400px;
   height: 300px;
   background-color: #101114;
@@ -137,6 +137,16 @@ a {
   
   .padWrapper {
     flex-wrap: wrap;
+  }
+
+  .lost {
+    top: 30%;
+    width: 300px;
+    height: 300px;
+  }
+
+  .AppContainer {
+    min-height: 95vh;
   }
 }
 
